styles.css
:root {
  --pink: #ef476f;
  --orange: #ffd166;
  --green: #06d6a0;
  --blue: #118ab2;
  --dark-blue: #073b4c;
  /* font-family: 'Roboto', sans-serif; */
}

* {
  box-sizing: border-box;
  border: 1px solid red;
  font-family: "Roboto", sans-serif;
}

html,
body {
  margin: 0;
  padding: 0;
}

/* side nav bar */

.scroll {
  overflow-y: auto;
  height: auto;
  /* max-height:200px; */
  border: 1px solid black;
  /* width:300px; */
}

nav {
  width: 16vw;
  height: 100vh;
  background: var(--green);
  list-style: none;
  color: white;
  font-weight: bold;
  list-style-type: none;
  position: fixed;
  transition: 0.5s;
  overflow: hidden;
  z-index: 1;
  overflow-y: scroll;
  top: 0;
  bottom: 0;
}

.icon-con {
  display: flex;
  align-items: center;
}

nav span {
  margin: 10px;
  margin-left: 20px;
}

nav iconify-icon {
  margin-left: 10px;
  margin-bottom: 5px;
}

.dashboard {
  margin-left: 5px;
}

#dash iconify-icon {
  margin-top: 10px;
  margin-left: 2px;
}

nav li {
  list-style: none;
  width: 100%;
  position: relative;
}

nav li a {
  position: relative;
  display: block;
  width: 100%;
  text-decoration: none;
  color: white;
  transition: 0.2s;
}

nav li a:hover {
  background-color: var(--blue);
}

nav li a::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 0;
  height: 100%;
  transition: 0.2s;
}

nav ul li a.toggle {
  display: none;
}

nav.active {
  width: 250px;
}

/* Scroll Bar */

/* width */
::-webkit-scrollbar {
  width: 5px;
}

/* Track */
::-webkit-scrollbar-track {
  background: #f1f1f1;
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: var(--blue);
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: var(--dark-blue);
}

/* header */

header {
  padding-top: 5px;
  background-color: whitesmoke;
  width: 84vw;
  position: fixed;
  right: 0;
  top: 0;
  border-bottom: var(--blue) 5px solid;
}

.center {
  display: flex;
  justify-content: center;
}

/* header buttons */

.myButton {
  background-color: var(--green);
  border-radius: 15px;
  font-weight: bold;
  border: 1px solid #18ab29;
  display: inline-block;
  cursor: pointer;
  color: white;
  font-size: 1rem;
  padding: 10px 20px;
  text-decoration: none;
  text-shadow: 0px 1px 0px #2f6627;
}
.myButton:hover {
  background-color: var(--blue);
}
.myButton:active {
  position: relative;
  top: 1px;
}

/* header grid */

.parent-header {
  display: grid;
  grid-template-columns: repeat(6, 1fr);
  grid-template-rows: repeat(2, 1fr);
  grid-column-gap: 5px;
  grid-row-gap: 5px;
  padding: 5px;
}

.div1h {
  display: flex;
  justify-content: flex-start;
  align-items: center;
  grid-area: 1 / 1 / 2 / 4;
}

.div1h img {
  object-fit: contain;
  width: 35px;
  padding: 0%;
  margin: 0;
  margin-left: 5px;
}
.div2h {
  grid-area: 1 / 4 / 2 / 5;
}
.div3h {
  grid-area: 1 / 5 / 2 / 6;
}
.div4h {
  grid-area: 1 / 6 / 2 / 7;
}
.div5h {
  grid-area: 2 / 1 / 3 / 4;
}
.div6h {
  grid-area: 2 / 4 / 3 / 5;
}
.div7h {
  grid-area: 2 / 5 / 3 / 6;
}
.div8h {
  grid-area: 2 / 6 / 3 / 7;
}

.div2h iconify-icon:hover {
  background-color: var(--green);
  border-radius: 20px;
  cursor: pointer;
}

.div2h iconify-icon:active {
  background-color: var(--blue);
}

.div3h {
  display: flex;
  justify-content: center;
  align-items: center;
  font-weight: bold;
  cursor: pointer;
}

.greeting {
  font-size: small;
  font-weight: bold;
}
.user-name {
  font-size: larger;
  font-weight: bold;
  margin-left: 25px;
}

.div4h {
  display: flex;
  flex-direction: column;
}

.div5h {
  display: flex;
  flex-direction: row-reverse;
  justify-content: center;
  align-items: center;
}

.div5h iconify-icon:hover {
  background-color: var(--green);
  cursor: pointer;
}

.div5h iconify-icon:active {
  background-color: var(--blue);
}

.div5h input[type="text"] {
  font-size: 1rem;
  height: fit-content;
}

/* projects grid */

h3 {
  margin-bottom: 5px;
  text-align: center;
}

.parent-projects {
  display: grid;
  margin: 0%;
  padding: 0;
  grid-template-columns: repeat(2, 1fr);
  grid-template-rows: repeat(3, 1fr);
  grid-column-gap: 5px;
  grid-row-gap: 5px;
  text-align: center;
}

.parent-projects p {
  font-size: smaller;
  margin: 0;
}

.parent-projects img {
  width: 100%;
  border-radius: 5px;
  border: 1px var(--blue) solid;
}

.div1p {
  display: flex;
  flex-direction: column;
  grid-area: 1 / 1 / 2 / 2;
}

.div2p {
  grid-area: 1 / 2 / 2 / 3;
}
.div3p {
  grid-area: 2 / 1 / 3 / 2;
}
.div4p {
  grid-area: 2 / 2 / 3 / 3;
}
.div5p {
  grid-area: 3 / 1 / 4 / 2;
}
.div6p {
  grid-area: 3 / 2 / 4 / 3;
}

@media (max-width: 1075px) {
  nav {
    /* left: -60px; */
    width: 55px;
  }

  header {
    width: calc(100vw - 55px);
  }

  #dash {
    margin-left: 0;
  }

  nav.active {
    left: 0;
  }

  nav ul li a.toggle {
    display: none;
  }
}

@media (max-width: 430px) {
  .parent-header {
    width: calc(100vw - 55px);
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-template-rows: repeat(4, 1fr);
    grid-column-gap: 0px;
    grid-row-gap: 0px;
    padding: 5px;
  }

  main {
    width: calc(100vw - 55px);
    padding-top: 150px;
    position: fixed;
    right: 0;
    padding-left: 5px;
  }

  .myButton {
    padding: 5px 15px;
    text-align: center;
    justify-content: center;
  }

  .div1h {
    grid-area: 1 / 1 / 2 / 2;
  }

  .div1h img {
    margin-left: 10px;
  }

  .div2h {
    grid-area: 1 / 2 / 2 / 3;
    display: flex;
    justify-content: flex-end;
  }
  .div3h {
    grid-area: 1 / 3 / 2 / 4;
  }
  .div4h {
    grid-area: 2 / 1 / 3 / 4;
    font-size: smaller;
    margin-left: 5px;
    align-items: center;
  }

  .greeting {
    font-size: smaller;
    text-align: start;
  }

  .user-name {
    margin-left: 0;
  }

  .div5h {
    grid-area: 3 / 1 / 4 / 4;
  }
  .div6h {
    grid-area: 4 / 1 / 5 / 2;
  }
  .div7h {
    grid-area: 4 / 2 / 5 / 3;
  }
  .div8h {
    grid-area: 4 / 3 / 5 / 4;
  }
}

